--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.14",
     "@smastrom/react-rating": "^1.5.0",
+    "@types/nodemailer": "^6.4.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.1",
     "lucide-react": "^0.534.0",
     "motion": "^12.23.12",
     "next": "15.4.4",
+    "nodemailer": "^7.0.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "swiper": "^11.2.10",
